// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using components Schema components Components are added to the bagger configuration 1`] = `
{
  "components": {
    "schemas": {
      "Person": {
        "additionalProperties": false,
        "properties": {
          "age": {
            "format": "float",
            "type": "number",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
    },
    "securitySchemes": {},
  },
  "info": {
    "title": "",
    "version": "",
  },
  "openapi": "3.0.0",
  "paths": {},
}
`;

exports[`Using components Schema components Creating and compiling a schema component 1`] = `
{
  "name": "Person",
  "schema": {
    "additionalProperties": false,
    "properties": {
      "age": {
        "format": "float",
        "type": "number",
      },
      "name": {
        "type": "string",
      },
    },
    "required": [
      "name",
    ],
    "type": "object",
  },
}
`;
